# libngsandroid

./: CMakeLists.txt
libngsandroid/: .gitignore  CMakeLists.txt
libngsandroid/src/: CMakeLists.txt  NgsAndroidJni.cpp
libngstoreapi/: CMakeLists.txt
libngstoreapi/src/: CMakeLists.txt
src/: CMakeLists.txt  NgsCoreAndroid.cpp  StdoutsToLogcatRedirector.cpp  StdoutsToLogcatRedirector.h  ngscoreandroid.cpp
